--- a/Products/zms/plugins/www/zmi.core.css
+++ b/Products/zms/plugins/www/zmi.core.css
@@ -622,6 +622,44 @@ body.zmi ul.zmi-container > .zmi-item .right i.titleimage-preview::after {
 	background-color:#f5f5f5;
 	box-shadow: none;
 }
+
+@media (min-width: 768px) {
+	.ZMSRecordSet.main_grid .table-responsive {
+		overflow:visible
+	}
+}
+.ZMSRecordSet.main_grid .zmi-image-preview .thumbnail::after {
+	content:"";
+	height:0;
+	opacity:0;
+	background-size:0;
+	background-color:#f5f5f5;
+	box-shadow: none;
+	top:1.5rem;
+}
+.ZMSRecordSet.main_grid .zmi-image-preview .thumbnail:hover::after {
+	content:"";
+	width:68vmin;
+	height:68vmin;
+	opacity:1;
+	display:block;
+	position:fixed;
+	background-image:inherit;
+	background-size:contain;
+	background-repeat:no-repeat;
+	background-position-y:center;
+	background-position-x:center;
+	background-color:white;
+	border:1px solid #c0c0c07d;
+	border-radius:4px;
+	z-index:1000;
+	top:0;
+	left: 0;
+	margin:10vh calc(( 100vw - 68vmin ) / 2);
+	box-shadow: 5px 5px 20px #c0c0c094;
+	transition: opacity .75s, height .5s, box-shadow 1s, background-color 1s  ease; 
+}
+
 body.zmi ul.zmi-container > .zmi-item .right video,
 body.zmi ul.zmi-container > .zmi-item .right i.titleimage-preview:hover::after {
 	content:"";
@@ -1244,7 +1282,49 @@ div.pull-left div.single-line.input-append.zmi-nodes textarea {
 
 .zmi a.ZMSGraphic_extEdit_action {
 	text-decoration:none;
+	height: 10vw;
+	background-size: cover;
+	display: flex;
+	background-repeat: no-repeat;
+	background-position: center;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 }
+
+.zmi a.ZMSGraphic_extEdit_action::after {
+	content:"";
+	height:0;
+	opacity:0;
+	background-size:0;
+	background-color:#f5f5f5;
+	box-shadow: none;
+}
+.zmi a.ZMSGraphic_extEdit_action:hover::after {
+	content:"";
+	width:80vw;
+	height:80vh;
+	opacity:1;
+	display:block;
+	position:fixed;
+	background-image:inherit;
+	background-size:contain;
+	background-repeat:no-repeat;
+	background-position-y:center;
+	background-position-x:center;
+	background-color:white;
+	border:1px solid #c0c0c07d;
+	border-radius:4px;
+	z-index:1000;
+	top:0;
+	left: 0;
+	margin:10vh 10vw;
+	box-shadow: 5px 5px 30px #c0c0c094;
+	transition: opacity .75s, height .5s, box-shadow 1s, background-color 1s  ease; 
+}
+
+
+
 .zmi a.ZMSGraphic_extEdit_action.changed {
 	display: block;
 	border-color: #80bdff;
@@ -1255,18 +1335,13 @@ div.pull-left div.single-line.input-append.zmi-nodes textarea {
 	opacity:0.2;
 }
 .zmi a.ZMSGraphic_extEdit_action .zmi-zoom-in {
-	color: #333;
-	background-color: #FFF;
-	border: 1px solid #CCC;
-	border-radius: 50%;
-	opacity: 0.5;
-	padding: .15rem 0 0 .25rem;
-	width: 1.5rem;
-	height: 1.5rem;
-	margin-top: -1.5rem;
-	margin-left: .15rem;
+	color: white;
+	font-size: 6vw;
+	opacity: .5;
 }
-.zmi a.ZMSGraphic_extEdit_action img,
+.zmi a.ZMSGraphic_extEdit_action img {
+	display: none;
+}
 .zmi #ZMSGraphic_extEdit_image {
 	border: 1px solid #666;
 	margin:1px;
@@ -1534,7 +1609,7 @@ table.table-sm td.meta-displaycol {
 	vertical-align: top;
 	padding-top: 1rem;
 }
-table.table-sm .form-control {
+table.table-sm td:not(.zmi-datatype-action) .form-control {
 	font-size: .8rem !important;
 	font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
@@ -2825,12 +2900,18 @@ ul.pagination .page-item {
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
-.ZMSRecordSet.main_grid table tbody tr td.data > div.zmi-image  div.zmi-image-preview {
+.ZMSRecordSet.main_grid table tbody tr td.data > div.zmi-image div.zmi-image-preview {
 	height: 2.25rem;
 	margin: 0;
 	line-height: 1;
 	overflow: hidden;
 }
+.ZMSRecordSet.main_grid table tbody tr td.data > div.zmi-image div.zmi-image-preview .zmi-zoom-in {
+	position: absolute;
+	top: 1.75rem;
+	left:1rem;
+}
+
 #zmiModalinsertUser .ZMSRecordSet.main_grid table tbody tr td.data:not(.zmi-datatype-image) div {
 	/* ignore inherited styles */
 	display:contents;
