monotonized preview_on_hover css

--- a/Products/zms/plugins/www/zmi.core.css
+++ b/Products/zms/plugins/www/zmi.core.css
@@ -612,63 +612,32 @@ body.zmi.ZMSTeaserContainer ul.zmi-container .zmi-item.pageelement .center .ZMST
 body.zmi ul.zmi-container > .zmi-item > .right {
 	flex-basis: 20%;
 }
-body.zmi ul.zmi-container > .zmi-item .right i.titleimage-preview:hover {
-	cursor:help;
-}
-body.zmi ul.zmi-container > .zmi-item .right i.titleimage-preview::after {
-	content:"";
-	height:0;
-	opacity:0;
-	background-color:#f5f5f5;
-	box-shadow: none;
-}
 
 @media (min-width: 768px) {
 	.ZMSRecordSet.main_grid .table-responsive {
 		overflow:visible
 	}
 }
-.ZMSRecordSet.main_grid .zmi-image-preview .thumbnail::after {
+
+.preview_on_hover::after {
 	content:"";
 	height:0;
 	opacity:0;
 	background-size:0;
 	background-color:#f5f5f5;
 	box-shadow: none;
-	top:1.5rem;
-}
-.ZMSRecordSet.main_grid .zmi-image-preview .thumbnail:hover::after {
-	content:"";
-	width:68vmin;
-	height:68vmin;
-	opacity:1;
-	display:block;
-	position:fixed;
-	background-image:inherit;
-	background-size:contain;
-	background-repeat:no-repeat;
-	background-position-y:center;
-	background-position-x:center;
-	background-color:white;
-	border:1px solid #c0c0c07d;
-	border-radius:4px;
-	z-index:1000;
-	top:0;
-	left: 0;
-	margin:10vh calc(( 100vw - 68vmin ) / 2);
-	box-shadow: 5px 5px 20px #c0c0c094;
-	transition: opacity .75s, height .5s, box-shadow 1s, background-color 1s  ease; 
+	margin-top:1.5rem;
 }
 
-body.zmi ul.zmi-container > .zmi-item .right video,
-body.zmi ul.zmi-container > .zmi-item .right i.titleimage-preview:hover::after {
+.preview_on_hover:hover::after,
+body.zmi ul.zmi-container > .zmi-item .right video {
 	content:"";
 	width:20vw;
 	height:20vw;
 	opacity:1;
 	display:block;
 	position:absolute;
-	background-image:var(--titleimage_url);
+	background-image:var(--preview_url);
 	background-size:contain;
 	background-repeat:no-repeat;
 	background-position-y:center;
@@ -681,6 +650,7 @@ body.zmi ul.zmi-container > .zmi-item .right i.titleimage-preview:hover::after {
 	box-shadow: 5px 5px 20px #c0c0c094;
 	transition: opacity .75s, height .5s, box-shadow 1s, background-color 1s  ease; 
 }
+
 @media (max-width: 767px) {
 	body.zmi header.navbar {
 		max-width: 100%;
@@ -1272,65 +1242,59 @@ div.pull-left div.single-line.input-append.zmi-nodes textarea {
 .zmi .slider-handle {
 	background-image:none;
 }
-
 .zmi div.ZMSGraphic div.graphic img.img-responsive {
 	max-width: 100%;
 	max-width:-webkit-fill-available;
 	width: inherit;
 	height:auto;
 }
-
-.zmi a.ZMSGraphic_extEdit_action {
-	text-decoration:none;
-	height: 10vw;
-	background-size: cover;
-	display: flex;
-	background-repeat: no-repeat;
-	background-position: center;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-}
-
-.zmi a.ZMSGraphic_extEdit_action::after {
-	content:"";
-	height:0;
-	opacity:0;
-	background-size:0;
-	background-color:#f5f5f5;
-	box-shadow: none;
-}
-.zmi a.ZMSGraphic_extEdit_action:hover::after {
-	content:"";
+.zmi a.ZMSGraphic_extEdit_action.preview_on_hover:hover::after {
 	width:80vw;
 	height:80vh;
-	opacity:1;
-	display:block;
 	position:fixed;
 	background-image:inherit;
-	background-size:contain;
-	background-repeat:no-repeat;
-	background-position-y:center;
-	background-position-x:center;
-	background-color:white;
-	border:1px solid #c0c0c07d;
-	border-radius:4px;
-	z-index:1000;
 	top:0;
 	left: 0;
 	margin:10vh 10vw;
-	box-shadow: 5px 5px 30px #c0c0c094;
-	transition: opacity .75s, height .5s, box-shadow 1s, background-color 1s  ease; 
 }
-
-
-
-.zmi a.ZMSGraphic_extEdit_action.changed {
-	display: block;
+.zmi a.ZMSGraphic_extEdit_action.changed img {
 	border-color: #80bdff;
 	outline: 0;
 	box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
 }
+.zmi a.ZMSGraphic_extEdit_action.changed.preview_on_hover:hover::after {
+	content: unset;
+}
+.zmi a.ZMSGraphic_extEdit_action.changed .zmi-zoom-in {
+	color:transparent;
+}
+.zmi a.ZMSGraphic_extEdit_action img {
+	position: absolute;
+	display: block;
+	object-fit: cover;
+	width: 90%;
+	height: 100%;
+	max-width: unset !important;
+	max-height: unset !important;
+}
+.zmi .ZMSRecordSet a.ZMSGraphic_extEdit_action img {
+	position: relative;
+	object-fit: cover;
+	width: 100%;
+	margin-left:0.5rem;
+}
+.zmi .ZMSRecordSet a.ZMSGraphic_extEdit_action.preview_on_hover:hover::after {
+	width:68vmin;
+	height:68vmin;
+	margin:10vh calc(( 100vw - 68vmin ) / 2);
+}
+.zmi .ZMSRecordSet .zmi-datatype-image .row,
+.zmi .ZMSRecordSet .zmi-datatype-image .col-9,
+.zmi .ZMSRecordSet .zmi-datatype-image .col-3 {
+	padding:0 !important;
+	margin:0 !important
+}
+
 .zmi a.ZMSGraphic_extEdit_action img.deleted {
 	opacity:0.2;
 }
@@ -1338,14 +1302,10 @@ div.pull-left div.single-line.input-append.zmi-nodes textarea {
 	color: white;
 	font-size: 6vw;
 	opacity: .5;
-}
-.zmi a.ZMSGraphic_extEdit_action img {
-	display: none;
+	text-align: center;
 }
 .zmi #ZMSGraphic_extEdit_image {
-	border: 1px solid #666;
-	margin:1px;
-	background:#CCC;
+	background:#0000001a;
 }
 .zmi #ZMSGraphic_extEdit_actions .form-group {
 	margin:0.3em 0 1em 0.3em;
@@ -1999,11 +1959,16 @@ body.browse_iframe .toggle {
 @media (min-width: 767px) {
 	.zmi .modal-dialog {
 		width: 80vw !important;
-		max-width: 80vw;
+		max-width:unset !important;
+		min-height: 80vh !important;
+		margin: 10vh auto;
+	}
+	.zmi .modal-dialog .modal-content {
+		min-height: 80vh !important;
 	}
 }
 @media (min-width: 1200px) {
-	.zmi div:not(#zmiModalupdateEntity) .modal-dialog {
+	.zmi div:not(#zmiModalupdateEntity):not(#zmiModalZMSGraphic_extEdit_actions) .modal-dialog {
 		max-width: 960px !important;
 	}
 }
@@ -2906,12 +2871,11 @@ ul.pagination .page-item {
 	line-height: 1;
 	overflow: hidden;
 }
-.ZMSRecordSet.main_grid table tbody tr td.data > div.zmi-image div.zmi-image-preview .zmi-zoom-in {
+.ZMSRecordSet.main_grid a.ZMSGraphic_extEdit_action .zmi-zoom-in {
 	position: absolute;
-	top: 1.75rem;
-	left:1rem;
+	text-align: center;
+	font-size: 2rem !important;
 }
-
 #zmiModalinsertUser .ZMSRecordSet.main_grid table tbody tr td.data:not(.zmi-datatype-image) div {
 	/* ignore inherited styles */
 	display:contents;
